--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,8 +8,8 @@ env:
 phases:
   install:
     commands:
-      - pip install https://s3.amazonaws.com/faculty-captured/faci-0.0.1.tar.gz
-      - faci msg Starting build at ${BUILDSHOT_URL_PREFIX}/builds/$(faci build_id)
+      - pip install https://s3.amazonaws.com/faculty-captured/faci-0.0.3.tar.gz
+      - faci notify
       - faci phase install
   pre_build:
     commands:
