--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,6 +20,8 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     container: lambci/lambda:build-python3.8
+    env:
+      IRC_CHANNEL: seantest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -29,6 +31,12 @@ jobs:
       - name: set up
         run: |
           pip install aws-sam-cli awscli boto3 botocore --force-reinstall --upgrade
+          pip install -i https://custom-packages.faculty.net faculty-faci
+
+      - name: tell IRC
+        run:
+          faci notify
+
 
 #      # Runs a set of commands using the runners shell
 #      - name: Run a multi-line script
