--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,6 +15,22 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  notify:
+    runs-on: ubuntu-latest
+    env:
+      IRC_CHANNEL: seantest
+
+    steps:
+      - name: setup
+      - run: |
+        apt install python3-pip
+        pip install -i https://custom-packages.faculty.net faculty-faci
+
+      - name: tell IRC
+        run: 'faci msg "Build starting: $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID"'
+
+
+
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
@@ -28,14 +44,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - name: set up
+      - name: setup
         run: |
           pip install aws-sam-cli awscli boto3 botocore --force-reinstall --upgrade
-          pip install -i https://custom-packages.faculty.net faculty-faci
-
-      - name: tell IRC
-        run: 'faci msg "Build starting: $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID"'
-
 
 #      # Runs a set of commands using the runners shell
 #      - name: Run a multi-line script
