try composite action

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,11 +22,12 @@ jobs:
       BOT_CLIENT_SECRET: ${{ secrets.BOT_CLIENT_SECRET }}
 
     steps:
-      - name: setup
-        run: |
-          wget --quiet https://custom-packages.faculty.net/botsay-0.1.0
-          chmod +x botsay-0.1.0
-          sudo mv botsay-0.1.0 /bin/botsay
+#      - name: setup
+#        run: |
+#          wget --quiet https://custom-packages.faculty.net/botsay-0.1.0
+#          chmod +x botsay-0.1.0
+#          sudo mv botsay-0.1.0 /bin/botsay
+      - uses: facultyco/action-install-botsay@v1
 
       - name: tell IRC
         run: 'botsay "Build starting: $GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID"'
